--- a/package.json
+++ b/package.json
@@ -2,13 +2,15 @@
   "name": "bitcoin-news",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "Index.js",
   "dependencies": {
     "next": "^9.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "isomorphic-unfetch": "^3.0.0"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
