--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "dev": "next",
-    "build": "next build",
+    "build": "next build & next export",
     "start": "next start"
   },
   "author": "",
